--- a/externalPerception/YoloNote.ipynb
+++ b/externalPerception/YoloNote.ipynb
@@ -1009,7 +1009,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python310",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1023,7 +1023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
